--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -27,26 +28,28 @@
             contrast</p>
           <button>Sign up</button>
         </div>
-        <img src="" alt="" aria-placeholder="this is a placeholder for an image">
+        <div class="image">this is a placeholder for an image</div>
       </div>
     </section>
     <section class="second-section">
       <h2>Some random information.</h2>
-      <div class="flex-container">
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="flex-container">
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="flex-container">
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
-      </div>
-      <div class="flex-container">
-        <div></div>
-        <p>this is some subtext under an illustration or image</p>
+      <div class="wrapper">
+        <div class="flex-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="flex-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="flex-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
+        <div class="flex-container">
+          <div></div>
+          <p>this is some subtext under an illustration or image</p>
+        </div>
       </div>
     </section>
     <section class="third-section">
